--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --watchAll"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "react-native"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -40,9 +40,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
     "@types/react": "~19.0.10",
+    "babel-jest": "^30.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
+    "jest-mock": "^30.0.2",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
